--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
                       justify-content: space-between; /* Espaçamento entre os itens */
                       padding: 0;
                       list-style: none;        /* Remove os marcadores padrão da lista */
+                      flex-wrap: nowrap;  /* Impede a quebra de linha */
                     }
+
+                    .footer-addresses address,
+                    .footer-addresses a {
+                      white-space: nowrap; /* Impede a quebra de linha */
+                    }                   
+           
                   </style>
                                 <li>
                     <h6>Montana Química São Paulo</h6>
