--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         .footer-addresses ul {
                             display: flex;
                             flex-direction: row;
-                            justify-content: space-between;
+                            justify-content: space-evenly;
                             gap: 80px;
                             padding: 0;
                             margin: 0;           /* Remove margens adicionais */
